- New form to create plots - Allow plot names and make plot numbers read only
Co-authored-by: Lukas Müller <lukasmuller10@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@hookform/resolvers": "^5.2.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
@@ -16,22 +17,22 @@
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
     "expo": "~53.0.20",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-maps": "^1.25.3",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.12.1",
-    "react-redux": "^9.2.0",
-    "zod": "^4.0.17",
-    "react-native-screens": "~4.11.1",
-    "react-native-safe-area-context": "5.4.0",
-    "react-dom": "19.0.0",
     "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4",
-    "expo-sqlite": "~15.2.14"
+    "react-redux": "^9.2.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
